project week1 done, I create an api to get, create, update and delete using 2 collection in mongodb
