# views/contacts.js
@@ -1,0 +1,11 @@
+const express = require('express');
+const router = express.Router();
+const contactController = require('../controllers/contacts');
+
+router.get('/', contactController.getAllContacts);
+router.get('/:id', contactController.getContactById);
+router.post('/', contactController.createContact);
+router.put('/:id', contactController.updateContact);
+router.delete('/:id', contactController.deleteContact);
+
+module.exports = router;
